--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <header>
         <h1>xuyu</h1>
         <p>Chinese Academy of Sciences<br>Institute of High Energy Physics<br>Spallation Neutron Source Science Center</p>
-        <p>Research Affiliate<br><a href="http://legacy.iza.org/en/webcontent/personnel/photos/index_html?key=24155">Institute for the Study of Labor (IZA)</a></p>
+        <p>Research Affiliate<br><a href="https://ihep.cas.cn/">Institute for the Study of Labor (IZA)</a></p>
         <p>Fellow<br><a href="https://glabor.org/user/tyleransom/">Global Labor Organization (GLO)</a></p>
     <h3><a href="https://tyleransom.github.io/">Home</a></h3>
         <h3><a href="https://tyleransom.github.io/research.html">Research</a></h3>
