--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <header>
         <h1>xuyu</h1>
         <p>Chinese Academy of Sciences<br>Institute of High Energy Physics<br>Spallation Neutron Source Science Center</p>
-        <p>Research Affiliate<br><a href="https://www.cas.cn/">Chinese Academy of Sciences (CAS)</a></p><br><a href="https://ihep.cas.cn/">Institute of High Energy Physics (IHEP)</a></p><br><a href="http://csns.ihep.cas.cn//">Spallation Neutron Source Science Center (SNSC)</a></p>
+        <p>Research Affiliate<br><a href="https://www.cas.cn/">Chinese Academy of Sciences (CAS)</p><br><a href="https://ihep.cas.cn/">Institute of High Energy Physics (IHEP)</p><br><a href="http://csns.ihep.cas.cn//">Spallation Neutron Source Science Center (SNSC)</p>
     <h3><a href="https://tyleransom.github.io/">Home</a></h3>
         <h3><a href="https://tyleransom.github.io/research.html">Research</a></h3>
     <h3><a href="https://tyleransom.github.io/research/CV.pdf">CV</a></h3>  
