--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
         <p>Chinese Academy of Sciences<br>Institute of High Energy Physics<br>Spallation Neutron Source Science Center</p>
         <p>Research Affiliate<br><a href="https://www.cas.cn/">Chinese Academy of Sciences (CAS)</p><br><a href="https://ihep.cas.cn/">Institute of High Energy Physics (IHEP)</p><br><a href="http://csns.ihep.cas.cn//">Spallation Neutron Source Science Center (SNSC)</p>
     <h3><a href="https://tyleransom.github.io/">Home</a></h3>
-        <h3><a href="https://tyleransom.github.io/research.html">Research</a></h3>
-    <h3><a href="https://tyleransom.github.io/research/CV.pdf">CV</a></h3>  
-        <h3><a href="https://tyleransom.github.io/code.html">Code</a></h3> 
-        <h3><a href="https://tyleransom.github.io/teaching.html">Teaching</a></h3> 
-        <h3><a href="https://tyleransom.github.io/personal.html">Personal</a></h3>
+        <h3><a href="https://www.cas.cn/">Research</a></h3>
+    <h3><a href="https://www.cas.cn/">CV</a></h3>  
+        <h3><a href="https://www.cas.cn/">Code</a></h3> 
+        <h3><a href="https://www.cas.cn/">Teaching</a></h3> 
+        <h3><a href="https://www.cas.cn/">Personal</a></h3>
     <b>Social</b><br>
         <div class="social-row">
           <a href="mailto:ransom@ou.edu" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a><br>
@@ -104,7 +104,7 @@
         </div>
         <br>
 
-    <p><b>Contact:</b><br>Department of Economics<br>University of Oklahoma<br>322 CCD1, 308 Cate Center Drive<br>Norman, OK 73072</p>
+    <p><b>Contact:</b><br>Tel:18810603040<br>WeChat:18810603040<br>Email:xuyu2024@foxmail.com<br>Address:1 Zhongziyuan Road, Dongguan 523803, Guangdong, China/p>
     <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </header>
       <section>
