--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <header>
         <h1>xuyu</h1>
         <p>Chinese Academy of Sciences<br>Institute of High Energy Physics<br>Spallation Neutron Source Science Center</p>
-        <p>Research Affiliate<br><a href="https://www.cas.cn/">Chinese Academy of Sciences (CAS)</p><br><a href="https://ihep.cas.cn/">Institute of High Energy Physics (IHEP)</p><br><a href="http://csns.ihep.cas.cn//">Spallation Neutron Source Science Center (SNSC)</p>
+        <p>Research Affiliate<br><a href="https://www.cas.cn/">Chinese Academy of Sciences (CAS)<br><a href="https://ihep.cas.cn/">Institute of High Energy Physics (IHEP)<br><a href="http://csns.ihep.cas.cn//">Spallation Neutron Source Science Center (SNSC)</p>
     <h3><a href="https://tyleransom.github.io/">Home</a></h3>
         <h3><a href="https://www.cas.cn/">Research</a></h3>
     <h3><a href="https://www.cas.cn/">CV</a></h3>  
@@ -110,7 +110,7 @@
       <section>
       <img src="IDphoto.jpg" height="360" width="280" alt="Tyler Ransom"></h3>
       <p>I am post-doctor.</p>
-      <p>My research interests include superconducting detector for photon.
+      <p>My research interest include superconducting detector for photon.
       </section>
     </div>
     <script src="javascripts/scale.fix.js"></script>
