--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <div class="wrapper">
       <header>
         <h1>xuyu</h1>
-        <p>Chinese Academy of Sciences<br>Institute of High Energy Physics<br>Spallation Neutron Source Science Center</p>
+        <p>post-doctor</p>
         <p>Research Affiliate<br><a href="https://www.cas.cn/">Chinese Academy of Sciences (CAS)<br><a href="https://ihep.cas.cn/">Institute of High Energy Physics (IHEP)<br><a href="http://csns.ihep.cas.cn//">Spallation Neutron Source Science Center (SNSC)</p>
     <h3><a href="https://tyleransom.github.io/">Home</a></h3>
         <h3><a href="https://www.cas.cn/">Research</a></h3>
