--- a/index.html
+++ b/index.html
@@ -85,12 +85,9 @@
         <h1>xuyu</h1>
         <p>post-doctor</p>
         <p>Research Affiliate<br><a href="https://www.cas.cn/">Chinese Academy of Sciences (CAS)<br><a href="https://ihep.cas.cn/">Institute of High Energy Physics (IHEP)<br><a href="http://csns.ihep.cas.cn//">Spallation Neutron Source Science Center (SNSC)</p>
-        <h3><a href="https://tyleransom.github.io/">Home</a></h3>
-        <h3><a href="https://www.cas.cn/">Research</a></h3>
-        <h3><a href="https://www.cas.cn/">CV</a></h3>  
-        <h3><a href="https://www.cas.cn/">Code</a></h3> 
-        <h3><a href="https://www.cas.cn/">Teaching</a></h3> 
-        <h3><a href="https://www.cas.cn/">Personal</a></h3>
+        <h3><a href="https://xuyu2024.github.io/">Home</a></h3>
+        <h3><a href="https://xuyu2024.github.io/cv.html">Curriculum Vitae</a></h3>  
+        <h3><a href="https://xuyu2024.github.io/research.html">Research</a></h3>
     <b>Social</b><br>
         <div class="social-row">
           <a href="mailto:ransom@ou.edu" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a><br>
