--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         </div>
         <br>
 
-    <p><b>Contact:</b><br>Tel:18810603040<br>WeChat:18810603040<br>Email:xuyu2024@foxmail.com<br>Address:1 Zhongziyuan Road, Dongguan 523803, Guangdong, China</p>
+    <p><b>Contact:</b><br>Tel:18810603040<br>Email:xuyu2024@foxmail.com<br>Address:1 Zhongziyuan Road, Dongguan 523803, Guangdong, China</p>
     <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </header>
       <section>
