--- a/index.html
+++ b/index.html
@@ -87,7 +87,9 @@
         <h1>xuyu</h1>
         <p><b>post-doctor</p>
         <p><b>Research Affiliate<br>
-          <a href="https://www.cas.cn/">Chinese Academy of Sciences (CAS)<br><a href="https://ihep.cas.cn/">Institute of High Energy Physics (IHEP)<br><a href="http://csns.ihep.cas.cn//">Spallation Neutron Source Science Center (SNSC)</p>
+          <a href="https://www.cas.cn/">Chinese Academy of Sciences (CAS)<br>
+          <a href="https://ihep.cas.cn/">Institute of High Energy Physics (IHEP)<br>
+          <a href="http://csns.ihep.cas.cn//">Spallation Neutron Source Science Center (SNSC)</p>
         
         <h3><a href="https://xuyu2024.github.io/">Home</a></h3>
         <h3><a href="https://xuyu2024.github.io/cv.html">Curriculum Vitae</a></h3>  
