--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <header>
         <h1>xuyu</h1>
         <p><b>post-doctor</p>
-        <p><b>Research Affiliate</b>b><br>
+        <p><b>Research Affiliate</b><br>
           <a href="https://www.cas.cn/">Chinese Academy of Sciences (CAS)<br>
           <a href="https://ihep.cas.cn/">Institute of High Energy Physics (IHEP)<br>
           <a href="http://csns.ihep.cas.cn//">Spallation Neutron Source Science Center (SNSC)</p>
