--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@
           <a href="https://www.cas.cn/">Chinese Academy of Sciences (CAS)</a><br>
           <a href="https://ihep.cas.cn/">Institute of High Energy Physics (IHEP)</a><br>
           <a href="http://csns.ihep.cas.cn//">Spallation Neutron Source Science Center (SNSC)</a></p>
-        
+        <hr>
         <h2><a href="https://xuyu2024.github.io/">Home</a></h2>
         <h2><a href="https://xuyu2024.github.io/cv.html">Curriculum Vitae</a></h2>  
         <h2><a href="https://xuyu2024.github.io/research.html">Research</a></h2>
-
+        <hr>
         <p><b>Contact:</b><br>
           Tel:18810603040<br>
           Email:xuyu2024@foxmail.com<br>
@@ -113,8 +113,7 @@
             
       <section>
       <img src="IDphoto.jpg" height="360" width="280" alt="xuyu"></h3>
-      <p>I am post-doctor.</p>
-      <p>My research interest include superconducting detector for photon.
+      <p>I am post-doctor. My research interest include superconducting detector for photon.</p>
       </section>
     </div>
     <script src="javascripts/scale.fix.js"></script>
