--- a/cv.html
+++ b/cv.html
@@ -111,7 +111,11 @@
         <h1>Basic information</h1>
         <p>I am born on September 25, 1997 in Harbin City, Heilongjiang Province, China. My parents work part-time jobs for a living.
 
-      <hr />
+        <hr />
+
+        <h1>Education</h1>
+        <p>2015-2019 guizhoudaxue wulixue xueshi</p>
+        <p>2019-2024 zhongguokexueyuandaxue liziwuliyuyuanzihewuli boshi</p>
           
 
       </section>
