--- a/cv.html
+++ b/cv.html
@@ -115,10 +115,11 @@
         <hr />
 
         <h1>Education</h1>
-        <p>2015-2019 guizhoudaxue wulixue xueshi</p>
-        <p>2019-2024 zhongguokexueyuandaxue liziwuliyuyuanzihewuli boshi</p>
+        <p>2015-2019 guizhoudaxue wulixue xueshi<br>
+        2019-2024 zhongguokexueyuandaxue liziwuliyuyuanzihewuli boshi</p>
           
-
+        <hr />
+        
       </section>
     </div>
     <script src="javascripts/scale.fix.js"></script>
