--- a/cv.html
+++ b/cv.html
@@ -115,8 +115,8 @@
         <hr />
 
         <h1>Education</h1>
-        <p>2015-2019 guizhoudaxue wulixue xueshi<br>
-        2019-2024 zhongguokexueyuandaxue liziwuliyuyuanzihewuli boshi</p>
+        <p>2015-2019 // Guizhou University // College of Physics // Physics // Bachelor of Science<br>
+        2019-2024 // University of Chinese Academy of Sciences // Institute of High Energy Physics // Particle Physics and Nuclear Physics // Doctor of Science</p>
           
         <hr />
         
