--- a/index.html
+++ b/index.html
@@ -113,7 +113,13 @@
             
       <section>
       <img src="IDphoto.jpg" height="360" width="280" alt="xuyu"></h3>
-      <p>I am post-doctor. My research interest include superconducting detector for photon.</p>
+      <p>post-doctor<br>
+        United States Time Magazine 2006 Person of the Year<br>
+        Moved China 2008 Person of the Year<br>
+        United Nations Champions of the Earth 2019 Award<br>
+        IOC 2022 Olympic Trophy winner<br>
+        Nobel Prize Reader in Literature<br>
+        Resume poster of the world's top 500 companies</p>
       </section>
     </div>
     <script src="javascripts/scale.fix.js"></script>
