--- a/research.html
+++ b/research.html
@@ -116,13 +116,10 @@
         <h2><b>Content</b></h2>
 
         <ul>  
-        <li>这是第一个项目</li>  
-        <li>这是第二个项目</li>  
-        <li>这是第三个项目</li>  
+        <li><a href="1TES">1.Transition-edge sensor (TES) detector</a></li>  
+        <li><a href="2STJ">2.Superconducting Tunnel Junction (STJ) detector</a></li>  
         </ul>
 
-        <p><a href="1TES">1.Transition-edge sensor (TES) detector</a></p>
-        <p><a href="2STJ">2.Superconducting Tunnel Junction (STJ) detector</a></p>
 
         <h3 id="1TES"><b>1.transition-edge sensor (TES) detector</b></h3>
         
