--- a/research.html
+++ b/research.html
@@ -116,8 +116,8 @@
         <h2><b>Content</b></h2>
 
         <ul>  
-        <li><a href="1TES">1.Transition-edge sensor (TES) detector</a></li>  
-        <li><a href="2STJ">2.Superconducting Tunnel Junction (STJ) detector</a></li>  
+        <li><a href="#1TES">1.Transition-edge sensor (TES) detector</a></li>  
+        <li><a href="#2STJ">2.Superconducting Tunnel Junction (STJ) detector</a></li>  
         </ul>
 
 
@@ -131,12 +131,6 @@
         <p>The detection mechanism of STJs is such that when the external superconducting layer absorbs incident photons, the Cooper pairs in said layer will be broken into quasiparticles, and as the quasiparticles flow through the barrier, there will be a current pulse. The current pulse height is proportional to the number of quasiparticles N, which is related to the energy of incident photon E, and can be calculated.</p>
 
 
-        <h3><b>2.1 transition-edge sensor (TES)</b></h3>
-        <p>As an ultrasensitive thermometer, TES makes use of the change of resistance from the superconducting state to the normal state caused by the increase of temperature.</p>
-        
-        <h3><b>2.2 Superconducting Tunnel Junction (STJ)</b></h3>
-        <p>The detection mechanism of STJs is such that when the external superconducting layer absorbs incident photons, the Cooper pairs in said layer will be broken into quasiparticles, and as the quasiparticles flow through the barrier, there will be a current pulse. The current pulse height is proportional to the number of quasiparticles N, which is related to the energy of incident photon E, and can be calculated.</p>
-   
       </section>
     </div>
     <script src="javascripts/scale.fix.js"></script>
