--- a/research.html
+++ b/research.html
@@ -124,11 +124,24 @@
         <h3 id="1TES"><b>1.transition-edge sensor (TES) detector</b></h3>
         
         <h4><b>1.1 application</b></h4>
-        <p>CMB</p>
-        <p>X-ray</p>
+        <p>CMB<br>
+           X-ray</p>
+
+        <h4><b>1.2 introduction</b></h4>
+
+        <h4><b>1.3 principle</b></h4>
+
 
         <h3 id="2STJ"><b>2.Superconducting Tunnel Junction (STJ) detector</b></h3>
-        <p>The detection mechanism of STJs is such that when the external superconducting layer absorbs incident photons, the Cooper pairs in said layer will be broken into quasiparticles, and as the quasiparticles flow through the barrier, there will be a current pulse. The current pulse height is proportional to the number of quasiparticles N, which is related to the energy of incident photon E, and can be calculated.</p>
+
+        <h4><b>2.1 application</b></h4>
+        <p>fluorescence<br>
+           X-ray</p>
+
+        <h4><b>2.2 introduction</b></h4>
+
+        <h4><b>2.3 principle</b></h4>
+
 
 
       </section>
