--- a/cv.html
+++ b/cv.html
@@ -126,6 +126,15 @@
         <p>2015-2019 // Guizhou University // College of Physics // Physics // Bachelor of Science<br>
         2019-2024 // University of Chinese Academy of Sciences // Institute of High Energy Physics // Particle Physics and Nuclear Physics // Doctor of Science</p>
 
+        <hr />
+        <h2>Experience</h2>
+        <p>Work for Ali CMB Polarization Telescope (AliCPT). Responsible for the research and development of the transition-edge sensor (TES) detector.
+        </p>
+
+    
+
+
+
         
       </section>
     </div>
