--- a/cv.html
+++ b/cv.html
@@ -128,10 +128,25 @@
 
         <hr />
         <h2>Experience</h2>
-        <p>Work for Ali CMB Polarization Telescope (AliCPT). Responsible for the research and development of the transition-edge sensor (TES) detector.
+        <p>Work for Ali CMB Polarization Telescope (AliCPT). <br>
+          Responsible for the research and development of the transition-edge sensor (TES) detector.<br>
+          <ul>  
+          <li>Simulation and layout design of detector and microwave devices</li>  
+          <li>Fabrication process development and complete tape-out of detector chips</li>  
+          <li>Cryogenic test platform construction and detector performance characterization</li>  
+          </ul>
         </p>
 
-    
+        <hr />
+        <h2>Professional Skills</h2>
+        <p>
+          <ul>  
+          <li>Simulation soft: Python/Matlab/ANSYS HFSS/Sonnet/Comsol/Klayout</li>  
+          <li>Fabrication:Contact exposure/Laser direct writing exposure/Magnetron sputtering/Electron beam evaporation/ICPCVD/ICPRIE/DRIE/Wet etch </li>  
+          <li>Measurement soft:Solidworks/Altium Designer/Labview</li>  
+          <li>Instrument control program writing. data processing</li>
+          </ul>
+        </p>
 
 
 
