--- a/pl.html
+++ b/pl.html
@@ -128,7 +128,8 @@
         <p><a href="https://tyleransom.github.io/paper list/luxuefeng2021.pdf">[2]Lu, Xuefeng, et al. "Prototype of meta-surface anti-reflection coating for a 40GHz HDPE lens." 10th International Symposium on Advanced Optical Manufacturing and Testing Technologies: Micro-and Nano-Optics, Catenary Optics, and Subwavelength Electromagnetics. Vol. 12072. SPIE, 2021.</a><br>
         <p><a href="https://tyleransom.github.io/paper list/gaoguanhua2022.pdf">[3]Guan-Hua, Gao, et al. "Estimation method for beam size of superconducting transition edge detector." ACTA PHYSICA SINICA 71.15 (2022).</a><br>
         <p><a href="https://tyleransom.github.io/paper list/chaiye2023.pdf">[4]Chai, Ye, et al. "A Thermal Kinetic Inductance Detector Pixel Design for CMB Polarization Observations at 90/150 GHz Bands." Journal of Low Temperature Physics 214.3 (2024): 210-218.</a><br>
-           
+        <p><a href="https://tyleransom.github.io/paper list/linan2024.pdf">[5]Li, N., et al. "A configurable ultra-low noise current source for transition-edge sensor characterization." Journal of Instrumentation 19.05 (2024): P05038.</a><br>
+             
         </p>  
 
 
