--- a/cv.html
+++ b/cv.html
@@ -141,9 +141,9 @@
         <h2>Professional Skills</h2>
         <p>
           <ul>  
-          <li>Simulation soft: Python/Matlab/ANSYS HFSS/Sonnet/Comsol/Klayout</li>  
-          <li>Fabrication:Contact exposure/Laser direct writing exposure/Magnetron sputtering/Electron beam evaporation/ICPCVD/ICPRIE/DRIE/Wet etch </li>  
-          <li>Measurement soft:Solidworks/Altium Designer/Labview</li>  
+          <li>Design soft: Python/Matlab/ANSYS HFSS/Sonnet/Comsol/Klayout</li>  
+          <li>Fabrication: Contact exposure/Laser direct writing exposure/Magnetron sputtering/Electron beam evaporation/ICPCVD/ICPRIE/DRIE/Wet etch </li>  
+          <li>Measurement soft: Solidworks/Altium Designer/Labview</li>  
           <li>Instrument control program writing. data processing</li>
           </ul>
         </p>
