--- a/pl.html
+++ b/pl.html
@@ -118,7 +118,7 @@
       <section>
         
         <h2>First Author & Corresponding author</h2>
-        <p><a href="https://tyleransom.github.io/paper list/xuyu2023.pdf">[1]Xu, Yu, et al. "Design and characterization of a 90 GHz CMB TES bolometer." Experimental Astronomy 57.2 (2024): 8.</a>
+        <p><a href="https://xuyu2024.github.io/paper list/xuyu2023.pdf">[1]Xu, Yu, et al. "Design and characterization of a 90 GHz CMB TES bolometer." Experimental Astronomy 57.2 (2024): 8.</a>
           
         </p>  
 
