--- a/cv.html
+++ b/cv.html
@@ -142,9 +142,8 @@
         <p>
           <ul>  
           <li>Design soft: Python/Matlab/ANSYS HFSS/Sonnet/Comsol/Klayout</li>  
-          <li>Fabrication: Contact exposure/Laser direct writing exposure/Magnetron sputtering/Electron beam evaporation/ICPCVD/ICPRIE/DRIE/Wet etch </li>  
-          <li>Measurement soft: Solidworks/Altium Designer/Labview</li>  
-          <li>Instrument control program writing. data processing</li>
+          <li>Micro-nano fabrication: Lithography/Magnetic sputtering/Electron beam evaporation/ICPCVD/ICPRIE/DRIE/Wet etch </li>  
+          <li>Measurement system: Solidworks/Altium Designer/Labview/Writing Instrument Control Scripts/Data processing</li>  
           </ul>
         </p>
 
