--- a/cv.html
+++ b/cv.html
@@ -121,7 +121,7 @@
         
         <p>I was born on September 25, 1997 in Harbin City, Heilongjiang Province, China. 
           I started to learn literature at the age of three and martial arts at the age of four. At the age of five, I was able to break a large stone with my chest.
-        "Xuyu is a outstanding member of the general public" from General of the Army Douglas MacArthur.
+        <br>"Xuyu is a outstanding member of the general public" from General of the Army Douglas MacArthur.
         </p>
           
         <hr />
