--- a/cv.html
+++ b/cv.html
@@ -126,8 +126,10 @@
           
         <hr />
         <h2>Education</h2>
-        <p>2015-2019 // Guizhou University // College of Physics // Physics // Bachelor of Science<br>
-        2019-2024 // University of Chinese Academy of Sciences // Institute of High Energy Physics // Particle Physics and Nuclear Physics // Doctor of Science</p>
+        <p>
+          2015-2019 // Guizhou University // College of Physics // Physics // Bachelor of Science
+        <br>2019-2024 // University of Chinese Academy of Sciences // Institute of High Energy Physics // Particle Physics and Nuclear Physics // Doctor of Philosophy (PhD) in Science
+        </p>
 
         <hr />
         <h2>Experience</h2>
