--- a/cv.html
+++ b/cv.html
@@ -143,7 +143,7 @@
         </p>
 
         <hr />
-        <h2>Professional Skills</h2>
+        <h2>Professional skills</h2>
         <p>
           <ul>  
           <li>Design soft: Python/Matlab/ANSYS HFSS/Sonnet/Comsol/Klayout</li>  
