--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <h2><a href="https://xuyu2024.github.io/">Home</a></h2>
         <h2><a href="https://xuyu2024.github.io/cv.html">Curriculum Vitae</a></h2>  
         <h2><a href="https://xuyu2024.github.io/research.html">Research</a></h2>
-        <h2><a href="https://xuyu2024.github.io/pl.html">Paper list</a></h2>
+        <h2><a href="https://xuyu2024.github.io/Publication.html">Publication</a></h2>
         <hr />
         
         <p><b>Contact:</b><br>
