--- a/Publication.html
+++ b/Publication.html
@@ -132,7 +132,7 @@
              
         </p>  
 
-        <h2>Publish Books</h2>
+        <h2>Books</h2>
         <p><a href="https://xuyu2024.github.io/Publication/xuyu2023.pdf">[1]暂无</a>
           
         </p>  
